[gd_scene load_steps=2 format=3 uid="uid://b2nlkp5mjwvax"]

[ext_resource type="Script" uid="uid://qg0nam0yfxy1" path="res://main_game/scripts/game_over.gd" id="1_2s5yf"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2s5yf")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 87.0
offset_bottom = 23.0
text = "Game Over"

[node name="RestartButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Restart"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Quit"
